update scrolling to fix horizontal scroll in ie

--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -21,6 +21,7 @@
       .scroll {
         display: flex;
         overflow-y: auto;
+        overflow-x: hidden;
         flex-direction: column;
         flex-grow: 1;
 
